
[[v2.2.0]]
v2.2.0 (unreleased)
-------------------

Deprecated
~~~~~~~~~~

- Running qutebrowser with Qt 5.12.0 is now unsupported and logs a warning. It
  should still work, however, a workaround for issues with the Nvidia graphic
  driver was dropped. Newer Qt 5.12.x versions are still fully supported.
- The `--force` argument for `:tab-only` is deprecated, use `--pinned close`
  instead.

Added
~~~~~

- New `input.media_keys` setting which can be used to disable Chromium's
  handling of media keys.
- New `:process` command (and associated `qute://process` pages) which can be
  used to view and terminate/kill external processes spawned by qutebrowser.
- New `content.site_specific_quirks.skip` setting which can be used to disable
  individual site-specific quirks.
- New `--pinned` argument for `:tab-only`, which replaces `--force` (with
  `--pinned close`), but also can take `--pinned keep` to keep pinned tabs
  without prompting.
- New `fileselect.folder.command` which can be used with
  `fileselect.handler = external` to customize the command to use to upload
  directories (`<input type="file" webkitdirectory />` elements, which are
  non-standard but in wide use).

Changed
~~~~~~~

- The `content.ssl_strict` setting got renamed to
  `content.tls.certificate_errors`, with new values:
  * `ask`: Prompt on overridable certificate errors (`ssl_strict = 'ask'`)
  * `ask-block-thirdparty`: See below
  * `block`: Block the page load (`ssl_strict = True`)
  * `load-insecurely`: Load the page despite the error (`ssl_strict = False`)
- The new `content.tls.certificate_errors` setting now also understands the
  value `ask-block-thirdparty`, which asks for page loads but automatically blocks
  resource loads on TLS errors. This behavior is consistent with what other
  browsers do.
- The prompt text shown on certificate errors has been improved to make it
  clearer what kind of error occurred exactly.
- The `content.site_specific_quirks` setting got renamed to