@@ -192,7 +192,8 @@ Feature: Tab management
         And I open data/numbers/3.txt in a new tab
         And I run :tab-focus 2
         And I run :tab-focus
-        Then the following tabs should be open:
+        Then the warning "Using :tab-focus without count is deprecated, use :tab-next instead." should be shown
+        And the following tabs should be open:
             - data/numbers/1.txt
             - data/numbers/2.txt
             - data/numbers/3.txt (active)
